feat: Add login and NetworkManager

--- a/OnTheMap/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/OnTheMap/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <segue destination="6Im-cZ-vVo" kind="show" id="wKC-jr-jzq"/>
+                                            <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="H9I-Bo-nln"/>
                                         </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Fe7-mr-pyp">
@@ -66,6 +66,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sZU-lv-rLt">
                                                 <rect key="frame" x="184" y="0.0" width="55" height="30"/>
                                                 <state key="normal" title="Sign Up"/>
+                                                <connections>
+                                                    <action selector="signUpButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bfJ-Jx-VNQ"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -88,6 +91,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="dZU-R8-Vq8" id="H6G-AP-DBK"/>
+                        <outlet property="passwordTextField" destination="UJa-uF-GPb" id="8Oc-k0-hKe"/>
+                        <segue destination="6Im-cZ-vVo" kind="show" identifier="toStudentInformation" id="piB-cF-MgW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
