--- a/OnTheMap/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/OnTheMap/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Mzk-5e-brg">
-                                <rect key="frame" x="30" y="80" width="315" height="310"/>
+                                <rect key="frame" x="30" y="50" width="315" height="310"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-u" translatesAutoresizingMaskIntoConstraints="NO" id="rZK-tW-C3Z">
                                         <rect key="frame" x="126.5" y="0.0" width="62" height="120"/>
@@ -32,13 +32,13 @@
                                         <rect key="frame" x="0.0" y="135" width="315" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UJa-uF-GPb">
                                         <rect key="frame" x="0.0" y="180" width="315" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bcA-s5-Fly" customClass="GradientButton" customModule="OnTheMap" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="225" width="315" height="40"/>
@@ -84,12 +84,16 @@
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="Mzk-5e-brg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="1no-8i-wMh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Mzk-5e-brg" secondAttribute="trailing" constant="30" id="6aR-LC-jgd"/>
-                            <constraint firstItem="Mzk-5e-brg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="eDE-KR-AGG"/>
+                            <constraint firstItem="Mzk-5e-brg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="eDE-KR-AGG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="4RP-qb-dRh" appends="YES" id="50K-by-ROo"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="emailTextField" destination="dZU-R8-Vq8" id="H6G-AP-DBK"/>
@@ -98,6 +102,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="4RP-qb-dRh">
+                    <connections>
+                        <action selector="backgroundTapped:" destination="BYZ-38-t0r" id="sfh-BT-XUv"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-886" y="26"/>
         </scene>
@@ -160,7 +169,7 @@
                                         <rect key="frame" x="0.0" y="182" width="315" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z4b-GY-LpH" customClass="GradientButton" customModule="OnTheMap" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="228" width="315" height="40"/>
@@ -188,12 +197,16 @@
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="iX9-Gp-zof" firstAttribute="top" secondItem="5PL-AD-sKU" secondAttribute="top" constant="30" id="B59-nb-4Ib"/>
                             <constraint firstItem="iX9-Gp-zof" firstAttribute="leading" secondItem="5PL-AD-sKU" secondAttribute="leading" constant="30" id="YUT-zV-ZbM"/>
                             <constraint firstItem="5PL-AD-sKU" firstAttribute="trailing" secondItem="iX9-Gp-zof" secondAttribute="trailing" constant="30" id="sGY-Gy-UJk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5PL-AD-sKU"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="3km-OK-6hx" appends="YES" id="wO7-a1-9W9"/>
+                        </connections>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Add Location" id="geT-C5-Kc9">
@@ -203,7 +216,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="linkTextField" destination="hGd-A4-elW" id="RSR-xj-jGt"/>
                         <outlet property="locationTextField" destination="dPm-Ps-0eR" id="olr-xP-SNJ"/>
@@ -211,6 +224,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QsE-1e-vUl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="3km-OK-6hx">
+                    <connections>
+                        <action selector="backgroundTapped:" destination="c4Z-y2-5ir" id="8KG-WP-Gdz"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-111" y="833"/>
         </scene>
@@ -223,10 +241,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="mg4-ST-ZkO">
-                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G42-ai-XVa" customClass="GradientButton" customModule="OnTheMap" customModuleProvider="target">
-                                <rect key="frame" x="30" y="553" width="315" height="40"/>
+                                <rect key="frame" x="30" y="597" width="315" height="40"/>
                                 <color key="backgroundColor" red="0.28627450980000002" green="0.63137254899999995" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="OvN-j4-9Qs"/>
@@ -259,7 +277,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AkR-Sz-yFS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="612" y="833"/>
+            <point key="canvasLocation" x="612" y="832.53373313343332"/>
         </scene>
         <!--List-->
         <scene sceneID="YOR-Q9-7p9">
